--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,7 +1,7 @@
 ﻿@page "/new-bug"
 <h3>Add New Bug</h3>
 
-<EditForm Model="AddBug">
+<EditForm Model="AddBug" OnValidSubmit="@HandleValidSubmit">
     <InputText @bind-value="@AddBug.Title" placeholder="Enter Title"/>
     <InputText @bind-value="@AddBug.Description" placeholder="Enter Description"/>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority" />
@@ -10,4 +10,17 @@
 
 @code {
     public Bug AddBug { get; set; } = new Bug();
+
+    [Inject]
+    public IBugService BugService { get; set; }
+
+    [Inject]
+    public NavigationManager NavService { get; set; }
+
+    protected void HandleValidSubmit()
+    {
+        BugService.AddBug(AddBug);
+
+        NavService.NavigateTo("");
+    }
 }
