--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -2,10 +2,12 @@
 <h3>Add New Bug</h3>
 
 <EditForm Model="AddBug" OnValidSubmit="@HandleValidSubmit">
-    <InputText @bind-value="@AddBug.Title" placeholder="Enter Title"/>
-    <InputText @bind-value="@AddBug.Description" placeholder="Enter Description"/>
+    <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"/>
+    <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"/>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority" />
     <button type="submit">Add Bug</button>
+    <DataAnnotationsValidator/>
+    <ValidationSummary/>
 </EditForm>
 
 @code {
